Simplify angular loop and fix text align in spotify exercise

--- a/spotifyexercise/common/styles/style.scss
+++ b/spotifyexercise/common/styles/style.scss
@@ -172,7 +172,6 @@ h3 {
     margin-left: $margin-left;
     margin-right: $margin-right;
     font-size: 20px;
-    text-align: justify;
     text-decoration: none;
     color: $main-color;
   }
